feat(engine): implement column projection and arithmetic computed columns for GET query